--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/leaflet.heat": "^0.2.4",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "html2canvas": "^1.4.1",
     "iconv-lite": "^0.6.3",
@@ -30,6 +31,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.8.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.1"
   },
